--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Matrix</title>
+    <title>404</title>
     <script>
         function matrix(){
             var alphabet =  ["1","0"];
@@ -45,7 +45,7 @@
                         offset = 0
 
                     var text = alphabet[offset++]
-                    var r  = ["😋","😚","😊","😷","😣","😓","😫","💀","👿","❤","✌","🐼","🐧","🐢","🐜"];
+                    var r  = ["W","A","R","N","I","N","G","b","y","f","a","d","d","d","r","f"];
                             
                     if(Math.floor((Math.random() * 100) + 1) > 98){
                         
