--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>404 Not Found Server Maintenance</title>
+    <title>Home | 404 Not Found</title>
     <script>
         function matrix(){
             var alphabet =  ["1","0"];
