--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         offset = 0
 
                     var text = alphabet[offset++]
-                    var r  = ["W","A","R","N","I","N","G","b","y","fadddrf","a","d","d","d","r","f"];
+                    var r  = ["H4CKED","W<br>A<br>R<br>N<br>I<br>N<br>G"fadddrf"];
                             
                     if(Math.floor((Math.random() * 100) + 1) > 98){
                         
