--- a/index.html
+++ b/index.html
@@ -45,13 +45,7 @@
                         offset = 0
 
                     var text = alphabet[offset++]
-                    var r  = ["H4CKED","W
-A
-R
-N
-I
-N
-G","fadddrf"];
+                    var r  = ["H4CKED","WARNING","fadddrf"];
                             
                     if(Math.floor((Math.random() * 100) + 1) > 98){
                         
