--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         offset = 0
 
                     var text = alphabet[offset++]
-                    var r  = ["W","A","R","N","I","N,"G","H4CKED","WARNING","fadddrf"];
+                    var r  = ["W","A","R","N","I","N","G","H4CKED","WARNING","fadddrf"];
                             
                     if(Math.floor((Math.random() * 100) + 1) > 98){
                         
